--- a/recipes/grilledcaribbean.html
+++ b/recipes/grilledcaribbean.html
@@ -8,7 +8,7 @@
     <h1>Grilled Caribbean-Spiced Pork Tenderloin with Peach Salsa</h1>
 </head>
 <body>
-    <img src="../images/Grilled.png" style="width:800px;height:450px;">
+    <img src="../images/Grilled.png" style="width:800px;height:400px;">
     <h1>Ingredients</h1>
     <p>
         <ul>
@@ -24,6 +24,6 @@
             <li>⅛ teaspoon salt</li>
             <li>⅛ teaspoon ground black pepper</li>
     </p>
-    <a href="../index.html">Return to Home</a>
+    <a href="../index.html">Return to HomePage</a>
 </body>
 </html>
